// Pisces Framework - Common Protocol Definitions
// Auto-generated by Pisces.Tools
// DO NOT EDIT - Changes will be overwritten

syntax = "proto3";

package pisces.protocol;

option csharp_namespace = "Pisces.Protocol";
enum MessageType {
    MESSAGE_TYPE_HEARTBEAT = 0;
    MESSAGE_TYPE_BUSINESS = 1;
    MESSAGE_TYPE_TIME_SYNC = 2;
    MESSAGE_TYPE_DISCONNECT = 3;
}

enum DisconnectReason {
    DISCONNECT_REASON_UNKNOWN = 0;
    DISCONNECT_REASON_CLIENT_CLOSE = 1;
    DISCONNECT_REASON_SERVER_CLOSE = 2;
    DISCONNECT_REASON_IDLE_TIMEOUT = 3;
    DISCONNECT_REASON_DUPLICATE_LOGIN = 4;
    DISCONNECT_REASON_SERVER_MAINTENANCE = 5;
    DISCONNECT_REASON_BANNED = 6;
    DISCONNECT_REASON_NETWORK_ERROR = 7;
    DISCONNECT_REASON_AUTHENTICATION_FAILED = 8;
}

message DisconnectNotify {
    DisconnectReason reason = 1;
    string message = 2;
    int64 estimated_recovery_time = 3;
    int64 timestamp = 4;
}

message ExternalMessage {
    MessageType message_type = 1;
    int32 protocol_switch = 2;
    int32 cmd_merge = 3;
    int32 response_status = 4;
    string valid_msg = 5;
    bytes data = 6;
    int32 msg_id = 7;
}

message TimeSyncMessage {
    int64 client_time = 1;
    int64 server_time = 2;
}

message IntValue {
    int32 value = 1;
}

message LongValue {
    int64 value = 1;
}

message StringValue {
    string value = 1;
}

message BoolValue {
    bool value = 1;
}

message IntValueList {
    repeated int32 values = 1;
}

message LongValueList {
    repeated int64 values = 1;
}

message StringValueList {
    repeated string values = 1;
}

message BoolValueList {
    repeated bool values = 1;
}

message ByteValueList {
    repeated bytes values = 1;
}

message Vector2 {
    float x = 1;
    float y = 2;
}

message Vector2Int {
    int32 x = 1;
    int32 y = 2;
}

message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Vector3Int {
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}

message Vector2List {
    repeated Vector2 values = 1;
}

message Vector2IntList {
    repeated Vector2Int values = 1;
}

message Vector3List {
    repeated Vector3 values = 1;
}

message Vector3IntList {
    repeated Vector3Int values = 1;
}

message ByteValueEntry {
    bytes key = 1;
    bytes value = 2;
}

message ByteValueMap {
    repeated ByteValueEntry entries = 1;
}

message IntKeyEntry {
    int32 key = 1;
    bytes value = 2;
}

message IntKeyMap {
    repeated IntKeyEntry entries = 1;
}

message LongKeyEntry {
    int64 key = 1;
    bytes value = 2;
}

message LongKeyMap {
    repeated LongKeyEntry entries = 1;
}

message StringKeyEntry {
    string key = 1;
    bytes value = 2;
}

message StringKeyMap {
    repeated StringKeyEntry entries = 1;
}

